--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -38,6 +38,12 @@ a,
     color: #20bf55;
     padding-left: 0.5vh;
   }
+  .true {
+    background: #e5e6eb;
+  }
+  .false {
+    background: #747579;
+  }
 }
 
 .dropdown-item {
