--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -9,7 +9,7 @@
       <i class="fas fa-bars menu"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav flex-row ml-md-auto d-md-flex">
+      <ul class="navbar-nav flex-row ml-md-auto">
         <li class="nav-item">
           <a class="nav-link" href="/"><i class="fas fa-bars"></i> Inicio</a>
         </li>
@@ -26,7 +26,7 @@
           <a class="nav-link" href="/classrooms"><i class="fas fa-chalkboard-teacher"></i> Aulas</a>
         </li>
       </ul>
-      <ul class="navbar-nav flex-row ml-md-auto d-md-flex">
+      <ul class="navbar-nav flex-row ml-md-auto">
           <li *ngIf="!identity" class="nav-item">
             <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Inicia sesión</a>
           </li>
@@ -36,13 +36,22 @@
           <li *ngIf="identity" class="nav-item">
             <a *ngIf="identity" class="nav-link" href="/messages"><i class="fas fa-envelope"></i></a>
           </li>
-          <li *ngIf="identity && notifications" class="nav-item">
+          <li *ngIf="identity" class="nav-item">
             <div class="dropdown nav-link">
-              <i id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="fas fa-bell"><span *ngIf="unviewedNotifications > 0"> {{unviewedNotifications}}</span></i>
-              <div class="dropdown-menu scrollable-menu" aria-labelledby="dropdownMenuButton">
-                <div id="notification-header"><small>Notificaciones</small></div>
-                <a *ngFor="let notification of notifications" class="dropdown-item" (click)="dimissNotification(notification._id)"><img class="avatar" src="{{ url + 'get-user-avatar/' + notification.emitter_id.avatar }}"/> {{notification.text}}</a>
-                <div id="notification-footer"><small>Ver todas</small></div>
+              <i id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="fas fa-bell"><span *ngIf="unviewedNotifications && unviewedNotifications > 0"> {{unviewedNotifications}}</span></i>
+              <div class="dropdown-menu scrollable-menu" aria-labelledby="dropdownMenuButton" onclick="event.stopPropagation()">
+                <div id="notification-header">Notificaciones</div>
+                <div *ngFor="let notification of notifications" class="dropdown-item {{notification.viewed}}">
+                  <a (click)="dimissThisNotification(notification._id)" class="link" href="{{notification.link}}">
+                    <img class="avatar" src="{{ url + 'get-user-avatar/' + notification.emitter_id.avatar }}"/>
+                    {{notification.text}}
+                  </a>
+                  <i *ngIf="notification.viewed == true" class="fas fa-circle"></i>
+                  <i *ngIf="notification.viewed == false" (click)="dimissThisNotification(notification._id)" class="fas fa-dot-circle" style="cursor: pointer;"></i>
+                </div>
+                <a *ngIf="total === 0" class="dropdown-item true">Vaya, aun no tienes notificaciones :(</a>
+                <div *ngIf="total > 0" class="dropdown-divider"></div>
+                <div *ngIf="total > 0" id="notification-footer">Ver todas</div>
               </div>
             </div>
           </li>
