--- a/client/src/app/components/discover/discover.component.scss
+++ b/client/src/app/components/discover/discover.component.scss
@@ -1,6 +1,11 @@
 $adagio-green: #20bf55;
 $adagio-gray: #282931;
 
+pre {
+    font-family: 'Roboto';
+    font-size: 100%;
+}
+
 .row {
     padding-left: 0;
     padding-right: 0;
