--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -67,6 +67,8 @@
                   <option value="J">J</option>
                   <option value="K">K</option>
                   <option value="L">L</option>
+                  <option value="L">M</option>
+                  <option value="L">N</option>
                 </select>
               </div>
               <div class="form-group-sm col" *ngIf="role.value  === 'student'">
@@ -86,6 +88,7 @@
                 <select name="career" #group="ngModel" [(ngModel)]="user.career" class="form-control form-control-sm"
                   required>
                   <option value="Administración de Recursos Humanos">Administración de Recursos Humanos</option>
+                  <option value="Automotríz">Automotríz</option>
                   <option value="Construcción">Construcción</option>
                   <option value="Producción Industrial de Alimentos">Producción Industrial de Alimentos</option>
                   <option value="Programación">Programación</option>
