--- a/client/src/app/components/discover/discover.component.html
+++ b/client/src/app/components/discover/discover.component.html
@@ -2,6 +2,7 @@
   <div class="row justify-content-md-center">
     <div *ngIf="publications" class="col-lg-8 content">
       <div *ngFor="let publication of publications" class="card publication">
+        <img *ngIf="publication.media_file" class="card-img-top media" src="{{ url +'get-media/' + publication.media_file }}">
         <div class="card-body">
           <img class="avatar" src="{{ url +'get-user-avatar/' + publication.user_id.avatar }}" *ngIf="publication.user_id.avatar">
           <div class="publication-header">
@@ -11,8 +12,7 @@
               <small class="nick"> @{{publication.user_id.unique_nick}}</small>
             </h6>
           </div>
-          <pre class="card-text">{{publication.text_field}}</pre>
-          <img class="card-img-bottom" src="{{ url +'get-publication-media/' + publication.media_file }}" *ngIf="publication.media_file">
+          <pre class="card-text">{{publication.text}}</pre>
           <button class="btn btn-sm" (click)="saveLike()"><i class="fas fa-chevron-up"></i><span *ngIf="publication.likes > 0"> {{publication.likes}}</span></button>
           <button class="btn btn-sm" (click)="openComments()"><i class="fas fa-comment-alt"></i></button>
           <button class="btn btn-sm disabled" (click)="sharePublication()"><i class="fas fa-share"></i></button>
