--- a/client/src/app/components/publications/publications.component.scss
+++ b/client/src/app/components/publications/publications.component.scss
@@ -95,7 +95,7 @@ pre {
     border: 1px solid #28293123;
     textarea {
         resize: none;
-        border: none;
+        border-radius: 0;
     }
     .btn {
         margin: 0.5vh; 
