--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,12 @@
 <div class="page-content content">
-  <nav class="navbar fixed-top navbar-expand-lg" style="line-height: 0;">
-    <a class="brand navbar-brand" href="/">
-      <img src="../assets/adagio-logo.png" class="d-inline-block logo mx-auto" alt="">
-      {{title}}
-    </a>
+  <nav class="navbar fixed-top navbar-expand-lg">
+    <img src="../assets/adagio-logo.png" class="logo" alt="">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars menu"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav flex-row">
+      <ul class="navbar-nav flex-row ml-md-auto">
         <li class="nav-item">
           <a class="nav-link" href="/"><i class="fas fa-bars"></i> Inicio</a>
         </li>
@@ -26,7 +23,7 @@
           <a class="nav-link" href="/classrooms"><i class="fas fa-chalkboard-teacher"></i> Aulas</a>
         </li>
       </ul>
-      <ul class="navbar-nav flex-row ml-md-auto">
+      <ul class="navbar-nav flex-row ml-md-auto" style="line-height: 0;">
           <li *ngIf="!identity" class="nav-item">
             <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Inicia sesión</a>
           </li>
