--- a/client/src/app/components/profile/profile.component.scss
+++ b/client/src/app/components/profile/profile.component.scss
@@ -1,46 +1,8 @@
 $adagio-green: #20bf55;
 $adagio-gray: #282931;
 
-pre {
-    font-family: 'Roboto';
-    font-size: 100%;
-}
-
-.container-fluid {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.row {
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.content {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.user-ui,
-.publication {
+.user-ui {
     box-shadow: 0px 1px 5px #28293165;
-}
-
-.publication {
-    margin-top: 1.5vh;
-    margin-bottom: 1.5vh;
-}
-
-.card {
-    border-radius: 5%;
-}
-
-.media {
-    width: 100%;
-}
-
-.card-body {
-    padding: 0.5vh;
 }
 
 .card,
@@ -62,21 +24,6 @@ pre {
         border-radius: 10%;
         width: 20vh;
         height: 20vh;
-    }
-
-    .publication-header {
-        color: $adagio-gray;
-        .date {
-            color: #666;
-        }
-    }
-
-    .avatar {
-        float: left;
-        margin-right: 1vh;
-        border-radius: 10%;
-        height: 7vh;
-        width: 7vh;
     }
 
     .card-text {
@@ -106,21 +53,6 @@ pre {
         margin-top: 0vh;
         margin-bottom: 0vh
     }
-}
-
-.btn-sm {
-    border-radius: 10%;
-    background: none;
-    color: $adagio-gray;
-    &:hover {
-        color: $adagio-green;
-    }
-}
-
-p,
-small {
-    margin-top: 0.5vh;
-    margin-bottom: 0.5vh;
 }
 
 @keyframes fade {
