--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div class="page-content content">
   <nav class="navbar fixed-top navbar-expand-lg">
     <img src="../assets/adagio-logo.png" class="logo" alt="">
+    <div style="color:#a0a0a0;">Versión Alpha 0.0.7</div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars menu"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav flex-row ml-md-auto">
+      <ul class="navbar-nav flex-row">
         <li class="nav-item">
           <a class="nav-link" href="/"><i class="fas fa-bars"></i> Inicio</a>
         </li>
